chore: 更新 .gitignore（忽略 .vs/ *.diagsession/.env）

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,14 @@ Desktop.ini
 
 # macOS
 .DS_Store
+
+# ====================
+# Visual Studio / Profiler
+# ====================
+.vs/                   # VS 的本地缓存与设置
+*.diagsession          # VS 性能分析会话文件
+
+# ====================
+# 本地环境/临时
+# ====================
+.env                   # 本地环境变量文件
