--- a/3223004210/pytest.ini
+++ b/3223004210/pytest.ini
@@ -1,5 +1,4 @@
 [pytest]
-
-addopts = -q
+addopts = --cov=src --cov-report=term-missing --cov-report=html
 testpaths = tests
 python_files = test_*.py
