test: 启用分支覆盖率并整理报告产物

--- a/3223004210/pytest.ini
+++ b/3223004210/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --cov=src --cov-report=term-missing --cov-report=html
+addopts = --cov=src --cov-branch --cov-report=term-missing --cov-report=html:reports/tests/coverage_html
 testpaths = tests
 python_files = test_*.py
