--- a/3223004210/requirements-dev.txt
+++ b/3223004210/requirements-dev.txt
@@ -1,5 +1,8 @@
+-r requirements.txt
 pylint>=3.0,<4
 ruff>=0.5,<0.6
 black>=24.0,<25.0
 isort>=5.13,<6
+pytest>=8,<9
+pytest-cov>=5,<6
 # mypy>=1.8,<2
