--- a/3223004210/requirements.txt
+++ b/3223004210/requirements.txt
@@ -1,5 +1,3 @@
 # Runtime dependencies for this project
 # Python >= 3.10 (tested on 3.12)
-#测试工具
-pytest>=8,<9
-pytest-cov>=5,<6
+# No third-party packages required.
