--- a/3223004210/.gitignore
+++ b/3223004210/.gitignore
@@ -10,3 +10,10 @@ __pycache__/
 .pytest_cache/
 *.py[cod]
 .vs/
+
+# VS/Profiler sessions & raw profiles
+reports/perf/*/*.diagsession
+reports/perf/*/*.vspx
+reports/perf/*/*.vsp
+reports/perf/*/*.etl
+reports/perf/*/*.pstats
